--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"name": "Add To Calendar",
 	"short_name": "CalendarAdd",
-	"version": "1.1",
+	"version": "1.2",
 	"author": "Matt Krins",
-	"homepage_url": "http://studiopaw.com/",
+	"homepage_url": "https://github.com/mattkrins/CalendarAdd",
 	"description": "Make a Google Calendar event from a selection of text",
 	"permissions": ["contextMenus"],
 	"manifest_version": 2,
@@ -17,3 +17,4 @@
 		"scripts": ["background.js"]
 	}
 }
+
